<resources>
    <string name="app_name">Food Assistant</string>
    <string name="food_assistant">Food Assistant</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="unknown">unknown</string>
    <string name="splash_text">Waiting for recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="proteins">Proteins</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="calories">Calories</string>
    <string name="nutritional_information">Nutritional Information</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="serving_size">Serving Size</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="instructions">Instructions</string>
</resources>