<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".recipe.RecipeActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/comicz"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/imageCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="512px"
            android:layout_height="512px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="256px"
            app:layout_constraintBottom_toTopOf="@id/ingredientsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView">


            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circle_shape" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ingredientsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_alignBottom="@+id/imageCardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/ingredients"
            app:layout_constraintBottom_toTopOf="@id/ingredientsContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCardView"/>
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/ingredientsContent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toTopOf="@id/instructionsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredientsText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instructionsText"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/instructions"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/instructionsContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredientsContent"/>

        <TextView
            android:id="@+id/instructionsContent"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comici"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/cookingTimeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionsText" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cookingTimeText"
            android:fontFamily="@font/comicz"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:text="@string/cooking_time"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/cookingTimeContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionsContent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cookingTimeContent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toTopOf="@id/servingSizeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cookingTimeText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/servingSizeText"
            android:text="@string/serving_size"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/servingSizeContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cookingTimeContent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/servingSizeContent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toTopOf="@id/difficultyLevelText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/servingSizeText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/difficultyLevelText"
            android:text="@string/difficulty_level"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/difficultyLevelContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/servingSizeContent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficultyLevelContent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toTopOf="@id/caloriesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficultyLevelText"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/nutritional_information"-->
<!--            android:id="@+id/nutritionalInformationText"-->
<!--            android:layout_marginTop="30dp"-->
<!--            app:layout_constraintBottom_toTopOf="@id/caloriesText"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/difficultyLevelContent"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caloriesText"
            android:textColor="@color/black"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:text="@string/calories"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/caloriesContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficultyLevelContent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caloriesContent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toTopOf="@id/carboText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caloriesText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carboText"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/carbohydrates"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/carboContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caloriesContent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carboContent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toTopOf="@id/fatText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carboText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fatText"
            android:textColor="@color/black"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:text="@string/fat"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/fatContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carboContent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fatContent"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toTopOf="@id/proteinText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fatText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicz"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/proteinText"
            android:text="@string/proteins"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/proteinContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fatContent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/proteinContent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comici"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fatText"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>